--- a/TestOpenCV3.0/TestOpenCV3.0.vcxproj
+++ b/TestOpenCV3.0/TestOpenCV3.0.vcxproj
@@ -77,8 +77,8 @@
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <LinkIncremental>true</LinkIncremental>
-    <IncludePath>F:\Tools\OpenCV\opencv\build\include\opencv2;F:\Tools\OpenCV\opencv\build\include\opencv;F:\Tools\OpenCV\opencv\build\include;$(IncludePath)</IncludePath>
-    <LibraryPath>F:\Tools\OpenCV\opencv\build\x64\vc14\lib;$(LibraryPath)</LibraryPath>
+    <IncludePath>D:\opencv\build\include\opencv2;D:\opencv\build\include\opencv;D:\opencv\build\include;$(IncludePath)</IncludePath>
+    <LibraryPath>D:\opencv\build\x64\vc14\lib;$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <LinkIncremental>false</LinkIncremental>
