--- a/TestOpenCV3.0/TestOpenCV3.0.vcxproj
+++ b/TestOpenCV3.0/TestOpenCV3.0.vcxproj
@@ -72,19 +72,25 @@
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <LinkIncremental>true</LinkIncremental>
-    <IncludePath>F:\Tools\OpenCV\opencv\build\include\opencv2;F:\Tools\OpenCV\opencv\build\include\opencv;F:\Tools\OpenCV\opencv\build\include;$(IncludePath)</IncludePath>
-    <LibraryPath>F:\Tools\OpenCV\opencv\build\x64\vc14\lib;$(LibraryPath)</LibraryPath>
+    <IncludePath>.;F:\Tools\OpenCV\opencv\build\include;F:\Tools\OpenCV\opencv\build\include\opencv2;F:\Tools\OpenCV\opencv\build\include\opencv;$(IncludePath)</IncludePath>
+    <LibraryPath>.;F:\Tools\OpenCV\opencv\build\x64\vc14\lib;$(LibraryPath)</LibraryPath>
+    <ExecutablePath>.;$(ExecutablePath)</ExecutablePath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <LinkIncremental>true</LinkIncremental>
-    <IncludePath>D:\opencv\build\include\opencv2;D:\opencv\build\include\opencv;D:\opencv\build\include;$(IncludePath)</IncludePath>
-    <LibraryPath>D:\opencv\build\x64\vc14\lib;$(LibraryPath)</LibraryPath>
+    <IncludePath>.;F:\Tools\OpenCV\opencv\build\include;F:\Tools\OpenCV\opencv\build\include\opencv2;F:\Tools\OpenCV\opencv\build\include\opencv;$(IncludePath)</IncludePath>
+    <LibraryPath>.;F:\Tools\OpenCV\opencv\build\x64\vc14\lib;$(LibraryPath)</LibraryPath>
+    <ExecutablePath>.;$(ExecutablePath)</ExecutablePath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <LinkIncremental>false</LinkIncremental>
+    <IncludePath>.;F:\Tools\OpenCV\opencv\build\include;F:\Tools\OpenCV\opencv\build\include\opencv2;F:\Tools\OpenCV\opencv\build\include\opencv;$(IncludePath)</IncludePath>
+    <LibraryPath>.;F:\Tools\OpenCV\opencv\build\x64\vc14\lib;$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <LinkIncremental>false</LinkIncremental>
+    <IncludePath>.;F:\Tools\OpenCV\opencv\build\include;F:\Tools\OpenCV\opencv\build\include\opencv2;F:\Tools\OpenCV\opencv\build\include\opencv;$(IncludePath)</IncludePath>
+    <LibraryPath>.;F:\Tools\OpenCV\opencv\build\x64\vc14\lib;$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
@@ -132,6 +138,7 @@
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
       <GenerateDebugInformation>true</GenerateDebugInformation>
+      <AdditionalDependencies>opencv_world320.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
@@ -150,6 +157,7 @@
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
       <GenerateDebugInformation>true</GenerateDebugInformation>
+      <AdditionalDependencies>opencv_world320.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
