--- a/TestOpenCV3.0/TestOpenCV3.0.vcxproj
+++ b/TestOpenCV3.0/TestOpenCV3.0.vcxproj
@@ -78,8 +78,8 @@
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <LinkIncremental>true</LinkIncremental>
-    <IncludePath>C:\Users\SIG Student\Source\Repos\opencv\build\include\opencv2;C:\Users\SIG Student\Source\Repos\opencv\build\include\opencv;C:\Users\SIG Student\Source\Repos\opencv\build\include;.;F:\Tools\OpenCV\opencv\build\include;F:\Tools\OpenCV\opencv\build\include\opencv2;F:\Tools\OpenCV\opencv\build\include\opencv;$(IncludePath)</IncludePath>
-    <LibraryPath>C:\Users\SIG Student\Source\Repos\opencv\build\x64\vc14\lib;.;F:\Tools\OpenCV\opencv\build\x64\vc14\lib;$(LibraryPath)</LibraryPath>
+    <IncludePath>D:\Program Files\opencv\build\include\opencv2;D:\Program Files\opencv\build\include\opencv;D:\Program Files\opencv\build\include;$(IncludePath)</IncludePath>
+    <LibraryPath>D:\Program Files\opencv\build\x64\vc14\lib;$(LibraryPath)</LibraryPath>
     <ExecutablePath>.;$(ExecutablePath)</ExecutablePath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
